jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenkins
          image: jenkins/jenkins:2.277.3-lts-alpine
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 50000
              name: executors
          volumeMounts:
            - name: data
              mountPath: /var/jenkins_home
      volumes:
        - name: data
          hostPath:
            path: /srv/state/jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http
    - port: 50000
      targetPort: 50000
      name: http-executors
  selector:
    app: jenkins
  sessionAffinity: "ClientIP"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: default
spec:
  rules:
    - host: jenkins.ci.lan
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins
              servicePort: 80
